Mon Oct 08 01:56:06 2007  Jiri (George) Lebl <jirka@5z.com>

	* help/C/*.xml: documentation updates

	* Release 1.0.0

Sun Oct 07 12:48:33 2007  Jiri (George) Lebl <jirka@5z.com>

	* configure.in: add missing languages

Sun Sep 30 21:00:49 2007  Jiri (George) Lebl <jirka@5z.com>

	* help/C/genius.xml: use the "Genius Mathematics Tool" that sounds
	  better

Sun Sep 30 20:53:11 2007  Jiri (George) Lebl <jirka@5z.com>

	* COPYING, src/genius.c, src/gnome-genius.c, src/funclib.c: update
	  to GPLv2

	* AUTHORS, TODO, README: minor updates

Sun Sep 30 20:31:30 2007  Jiri (George) Lebl <jirka@5z.com>

	* configure.in, NEWS, help/C/genius.xml: make this 1.0.0 release,
	  what the hell, it's been 10 years, we deserve a 1.0 of Genius

Sun Sep 30 11:42:59 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: workaround a segfault in vte when
	  a very long string is given.
	
	* src/mpwrap.c: fix bug with scientific notation.  Also change
	  behaviour of automatic scientific notation to follow the max digits
	  parameter

	* src/Makefile.am: fix order of -I and change the way we link our own
	  libs to be more robust.

	* configure.in: fix

	* src/funclibhelper.cP: fix nonegative integer vs positive integer
	  checking and add square matrix checking

	* src/mpwrap.[ch]: add binomial and get_ulong

	* src/funclib.c: Add builtin versions of IsVector, IsDiagonal,
	  IsUpperTriangular, IsLowerTriangular, nCr (Binomial) for speed.

	* help/C/gel-function-list.xml: add docs for
	  RayleighQuotientIteration, StirlingNumberFirst and Second,
	  and update nCr doc string

	* help/C/*.xml: update the document to look better printed.  Remove
	  uneeded paragraph separators, and rewrite small bits.

	* lib/linear_algebra/misc.gel: fix ApplyOverMatrix2, remove some
	  unneeded semicolons, remove functions now builtin

	* lib/linear_algebra/linear_algebra.gel: fix RayleighQuotient
	  and add RayleighQuotientIteration

	* lib/combinatorics/misc.gel: Hofstadter, HarmonicNumber