@@ -1,3 +1,8 @@
+Sat Oct 13 09:42:33 2007  Jiri (George) Lebl <jirka@5z.com>
+
+	* help/C/gel-variables.xml: add more on scope of variables and
+	  other minor fixes.
+
 Mon Oct 08 01:56:06 2007  Jiri (George) Lebl <jirka@5z.com>
 
 	* help/C/*.xml: documentation updates
